# taximate

./: .gitignore  .mypy.ini  .ruff.toml  LICENSE  Makefile  README.md  main.py  pyproject.toml  taximate_mac.spec
.github/workflows/: _build-artifacts.yml  _run-tests.yml  build.yaml  deploy.yml  release.yaml
data/: 02-2024-Test-Transactions.csv  03-2024-Test-Transactions.csv  06-2024-Test-Transactions.csv  10-2024-Test-Transactions.csv  11-2024-Test-Transactions.csv
src/: __init__.py  data_loader.py  gui.py  tax_calculator.py  tax_rate_updater.py
src/js/: components.json  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
src/js/app/: App.tsx  index.css  main.tsx  pyodide-runner.ts  types.ts
src/js/app/components/: CategoryPanel.tsx  DeductionDialogs.tsx  FileLoader.tsx  ItemsList.tsx  ResultsTable.tsx
src/js/app/lib/: format.ts
src/python/taximate/: __init__.py
src/python/taximate/core/: data_loader.py  deductions.py  tax_calculator.py
src/python/taximate/tax_rates/: california_income_tax_2025.csv  federal_income_tax_2025.csv  federal_income_tax_2026.csv  massachusetts_income_tax_2026.csv  rate_files.csv  sales_tax_2025.csv  sales_tax_2026.csv  self_employment_tax_2026.csv  state_tax_rules.csv
src/python/tests/: conftest.py  test_data_loader.py  test_deductions.py  test_golden_correctness.py  test_tax_calculator.py
src/python/tests/fixtures/: 01-2024-Test-Transactions.csv  04-2024-Test-Transactions.csv  05-2024-Test-Transactions.csv  07-2024-Test-Transactions.csv  08-2024-Test-Transactions.csv  09-2024-Test-Transactions.csv  12-2024-Test-Transactions.csv
src/taximate/: __init__.py
src/taximate/core/: __init__.py  tax_calculator.py
src/taximate/gui/: __init__.py  _dialogs.py  _styles.py  app.py
tax_rates/: california_income_tax_2024.csv  federal_income_tax_2025.csv  sales_tax_2025.csv  self_employment_tax_2025.csv
tests/: conftest.py
tests/core/: test_data_loader.py  test_deductions.py  test_tax_calculator.py
tests/gui/: test_app.py
