[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/taximate"]

[project]
name = "taximate"
version = "0.3.0"
description = "Import EveryDollar transactions and calculate tax deductions"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0.0",
    "numpy<2.0",
    "PySide6>=6.6.0,<6.8",
]

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pandas-stubs>=2.0.0",
    "pyinstaller>=6.0.0",
    "pytest>=8.0.0",
    "pytest-qt>=4.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
