[build-system]
requires = ["uv_build>=0.11.28,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src/python"

[project]
name = "taximate"
version = "0.4.0"
description = "Import EveryDollar transactions and calculate estimated self-employment taxes"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.4",
]

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["src/python/tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM", "RUF"]
ignore = ["E501"]  # line length is enforced by the formatter

[tool.ruff.lint.isort]
known-first-party = ["taximate"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
mypy_path = "src/python"
exclude = "(^|.*/)(tests)(/|$)"
disable_error_code = ["import-untyped", "assignment", "call-overload", "misc"]
enable_error_code = ["possibly-undefined", "explicit-override"]
disallow_any_expr = true
disallow_any_decorated = true
disallow_subclassing_any = true
disallow_untyped_decorators = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_redundant_casts = true
strict_equality = true
